fix nav gap on mobile version, remove product title highlight in Docs

--- a/css/pwapi.css
+++ b/css/pwapi.css
@@ -1029,7 +1029,7 @@ p {
 
 #api_nav {
 	background:#f9fcfd;
-	top: 65px;
+	top: 63px;
 	bottom:0;
 	width: 16.66667%;
 	padding-left: 3%;
